--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import './components/titles';
 @import './components/button';
 @import './components/logo';
+@import './components/burgermenu';
 @import './layouts/header';
 @import './layouts/hero';
 @import './layouts/features';
@@ -15,6 +16,6 @@
 @import './layouts/clients';
 @import './layouts/portfolio';
 @import './layouts/footer';
-@import './components/modalwindow';
+@import './components/modalorder';
 @import './components/checkbox';
 @import './components/closebutton';
