--- a/css/main.css
+++ b/css/main.css
@@ -160,6 +160,110 @@ body {
   color: var(--secondary-accent-color);
 }
 
+.burger__open {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  .burger__open {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .burger__open {
+    display: none;
+  }
+}
+.burger__close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
+}
+
+.burger-menu {
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  top: 0;
+  left: 0;
+  padding: 48px 40px;
+  width: 100vw;
+  height: 100vh;
+  background-color: #ffffff;
+  transform: translateX(0);
+  transition: transform 1000ms;
+}
+.burger-menu.is-hidden {
+  transform: translateY(-100%);
+}
+.burger-menu__wrap:not(:last-child) {
+  margin-bottom: 34px;
+}
+.burger-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+}
+.burger-menu__link--actual {
+  color: var(--primary-accent-color);
+}
+.burger-menu__contacts {
+  margin-bottom: 64px;
+}
+.burger-menu__tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--primary-accent-color);
+}
+.burger-menu__email {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
+.burger-menu__social {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 5px;
+}
+.burger-menu__items {
+  padding: 0px 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+.burger-menu__items:first-child {
+  padding-left: 0;
+}
+.burger-menu__items:last-child {
+  border-right: none;
+  padding-right: 0;
+}
+.burger-menu__networks {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--primary-accent-color);
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
 .page-header {
   border-bottom: #ececec solid 1px;
 }
@@ -196,14 +300,13 @@ body {
   align-items: center;
 }
 .nav__list {
-  visibility: hidden;
-  position: absolute;
-  display: flex;
+  display: none;
   align-items: center;
   gap: 50px;
 }
 @media screen and (min-width: 768px) {
   .nav__list {
+    display: flex;
     visibility: visible;
     position: static;
   }
@@ -239,14 +342,13 @@ body {
 }
 
 .header-contacts {
-  visibility: hidden;
-  display: flex;
-  position: absolute;
+  display: none;
 }
 @media screen and (min-width: 768px) {
   .header-contacts {
     visibility: visible;
     position: static;
+    display: flex;
     flex-direction: column;
     gap: 10px;
   }
@@ -293,14 +395,29 @@ body {
   text-align: center;
   padding: 0;
 }
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images/mob/studio/hero-mob@2x.jpg);
+  }
+}
 @media screen and (min-width: 768px) {
   .hero {
     background-image: var(--hero-bg-gradient), url(../images/tablet/studio/hero-tablet.jpg);
   }
 }
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images/tablet/studio/hero-tablet@2x.jpg);
+  }
+}
 @media screen and (min-width: 1200px) {
   .hero {
     background-image: var(--hero-bg-gradient), url(../images/desktop/studio/hero-desktop.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images/desktop/studio/hero-desktop@2x.jpg);
   }
 }
 .hero__container {
@@ -540,7 +657,6 @@ body {
   column-gap: 8px;
   row-gap: 15px;
   margin-bottom: 50px;
-  width: 80%;
 }
 @media screen and (min-width: 768px) {
   .filter {
@@ -554,7 +670,7 @@ body {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.63;
-  border: none;
+  border: transparent;
   border-radius: 4px;
   background-color: var(--bg-color-light);
   color: var(--title-text-color);
@@ -781,13 +897,19 @@ body {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   padding: 40px;
-  width: 528px;
-  max-width: 100vh;
-  height: 581px;
+  width: 450px;
+  max-width: 100vw;
+  height: 609px;
   max-height: 100vh;
   border-radius: 4px;
   background-color: #ffffff;
   transition: transform 1000ms;
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 .modal__backdrop {
   position: fixed;
@@ -810,9 +932,14 @@ body {
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   color: var(--title-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .modal__title {
+    line-height: 1.15;
+  }
 }
 .modal__form {
   display: flex;
@@ -869,7 +996,13 @@ body {
   justify-content: center;
   gap: 7px;
   margin-bottom: 30px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
+}
+@media screen and (min-width: 1200px) {
+  .modal__agreement {
+    line-height: 1.71;
+  }
 }
 .modal__link {
   line-height: 1.71;
