--- a/sass/components/_modalorder.scss
+++ b/sass/components/_modalorder.scss
@@ -4,13 +4,18 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   padding: 40px;
-  width: 528px;
-  max-width: 100vh;
-  height: 581px;
+  width: 450px;
+  max-width: 100vw;
+  height: 609px;
   max-height: 100vh;
   border-radius: 4px;
   background-color: #ffffff;
   transition: transform 1000ms;
+
+  @include desktop {
+    width: 528px;
+    height: 581px;
+  }
 
   &__backdrop {
   position: fixed;
@@ -36,9 +41,13 @@
     margin-bottom: 12px;
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.15;
+    line-height: 1.50;
     text-align: center;
     color: var(--title-text-color);
+
+    @include desktop {
+    line-height: 1.15;      
+    }
   }
   &__form {
     display: flex;
@@ -102,7 +111,12 @@
     justify-content: center;
     gap: 7px;
     margin-bottom: 30px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.17;
+
+    @include desktop {
+      line-height: 1.71;
+    }
   }
 
   &__link {
