--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -5,14 +5,30 @@
   background-size: cover;
   text-align: center;
   padding: 0;
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/mob/studio/hero-mob@2x.jpg);
+  }
   
   @include tablet {
     background-image: var(--hero-bg-gradient),
     url(../images/tablet/studio/hero-tablet.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/tablet/studio/hero-tablet@2x.jpg);
+    }
   }
   @include desktop {
     background-image: var(--hero-bg-gradient),
     url(../images/desktop/studio/hero-desktop.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/desktop/studio/hero-desktop@2x.jpg);
+    }
   }
   
   &__container {
