--- a/css/main.css
+++ b/css/main.css
@@ -209,6 +209,11 @@ body {
 .burger-menu__wrap:not(:last-child) {
   margin-bottom: 34px;
 }
+@media screen and (max-width: 450px) {
+  .burger-menu__wrap:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
 .burger-menu__link {
   font-weight: 500;
   font-size: 40px;
@@ -219,8 +224,18 @@ body {
 .burger-menu__link--actual {
   color: var(--primary-accent-color);
 }
+@media screen and (max-width: 450px) {
+  .burger-menu__link {
+    font-size: 30px;
+  }
+}
 .burger-menu__contacts {
   margin-bottom: 64px;
+}
+@media screen and (max-width: 450px) {
+  .burger-menu__contacts {
+    margin-bottom: 40px;
+  }
 }
 .burger-menu__tel {
   font-weight: 500;
@@ -229,12 +244,22 @@ body {
   letter-spacing: 0.02em;
   color: var(--primary-accent-color);
 }
+@media screen and (max-width: 450px) {
+  .burger-menu__tel {
+    font-size: 26px;
+  }
+}
 .burger-menu__email {
   font-weight: 500;
   font-size: 24px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
+}
+@media screen and (max-width: 450px) {
+  .burger-menu__email {
+    font-size: 18px;
+  }
 }
 .burger-menu__social {
   display: flex;
@@ -258,6 +283,11 @@ body {
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: var(--primary-accent-color);
+}
+@media screen and (max-width: 450px) {
+  .burger-menu__networks {
+    font-size: 10px;
+  }
 }
 
 .no-scroll {
